compiler/src/test/resources/amyc/typer/failing/IfAndErrorWrong.amy
module IfAndErrorWrong
  val x: Int = if (true) { error("") } else { "" };
  x
end IfAndErrorWrong
